main/default/objects/Product_Family__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF(ISNULL(Expiration__c), &quot;No&quot;, IF(Expiration__c &lt; TODAY(), &quot;Yes&quot;, &quot;No&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Text</type>
</CustomField>