main/default/objects/Product_Family__c/fields/NeedsBandwidthQual__c.field-meta.xml
<CustomField>
    <fullName>NeedsBandwidthQual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NeedsBandwidthQual</label>
    <type>Checkbox</type>
</CustomField>