main/default/objects/Product_Family__c/fields/NeedsLSOQual__c.field-meta.xml
<CustomField>
    <fullName>NeedsLSOQual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NeedsLSOQual</label>
    <type>Checkbox</type>
</CustomField>