main/default/objects/Product_Family__c/fields/Number_of_Voice_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Voice_Products__c</fullName>
    <label>Number of Voice Products</label>
    <summarizedField>SalesProduct__c.Number_of_Voice_Products__c</summarizedField>
    <summaryForeignKey>SalesProduct__c.Product_Family__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>