main/default/objects/Product_Family__c/fields/ProductFamilyExternalID__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ProductFamilyExternalID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>